--- a/conf/.env
+++ b/conf/.env
@@ -1,5 +1,7 @@
 # See https://docs.karakeep.app/configuration for more information
 
+PORT=__PORT_WEB__
+
 NODE_ENV=production
 SERVER_VERSION=__RELEASE__
 NEXTAUTH_SECRET="__SECRET__"
