--- a/conf/.env
+++ b/conf/.env
@@ -1,12 +1,13 @@
 # See https://docs.karakeep.app/configuration for more information
 
+HOSTNAME=127.0.0.1
 PORT=__PORT_WEB__
 
 NODE_ENV=production
 SERVER_VERSION=__RELEASE__
 NEXTAUTH_SECRET="__SECRET__"
 NEXTAUTH_URL="http://127.0.0.1:__PORT_WEB__"
-DATA_DIR=__DATA_DIR__
+DATA_DIR=__INSTALL_DIR__
 #MEILI_ADDR="http://127.0.0.1:7700"
 #MEILI_MASTER_KEY="${MASTER_KEY}"
 BROWSER_WEB_URL="http://localhost:__PORT_BROWSER__"
