--- a/conf/karakeep-web.service
+++ b/conf/karakeep-web.service
@@ -11,8 +11,8 @@ EnvironmentFile=__INSTALL_DIR__/.env
 Environment="PATH=__PATH_WITH_NODEJS__"
 WorkingDirectory=__INSTALL_DIR__/apps/web
 ExecStart=__NODEJS_DIR__/node .next/standalone/apps/web/server.js
-StandardOutput=file:/var/log/__APP__/__APP__-web.log
-StandardError=file:/var/log/__APP__/__APP__-web.log
+StandardOutput=append:/var/log/__APP__/__APP__-web.log
+StandardError=append:/var/log/__APP__/__APP__-web.log
 TimeoutStopSec=5
 SyslogIdentifier=__APP__-web
 
