--- a/conf/karakeep-workers.service
+++ b/conf/karakeep-workers.service
@@ -9,10 +9,10 @@ Group=__APP__
 Restart=always
 EnvironmentFile=__INSTALL_DIR__/.env
 Environment="PATH=__PATH_WITH_NODEJS__"
-WorkingDirectory=__INSTALL_DIR__/prod/workers
-ExecStart=__NODEJS_DIR__/npm run start:prod
-StandardOutput=file:/var/log/__APP__/karakeep-workers.log
-StandardError=file:/var/log/__APP__/karakeep-workers.log
+WorkingDirectory=__INSTALL_DIR__/apps/workers
+ExecStart=__NODEJS_DIR__/node dist/index.mjs
+StandardOutput=append:/var/log/__APP__/karakeep-workers.log
+StandardError=append:/var/log/__APP__/karakeep-workers.log
 TimeoutStopSec=5
 SyslogIdentifier=__APP__-workers
 
