--- a/conf/.env
+++ b/conf/.env
@@ -7,8 +7,8 @@ NODE_ENV=production
 SERVER_VERSION=__RELEASE__
 NEXTAUTH_SECRET="__SECRET__"
 NEXTAUTH_URL="http://127.0.0.1:__PORT_WEB__"
-DATA_DIR=__DATA_DIR__
-DB_PATH=__INSTALL_DIR__/db
+DATA_DIR=__INSTALL_DIR__
+ASSETS_DIR=__DATA_DIR__/assets
 #MEILI_ADDR="http://127.0.0.1:7700"
 #MEILI_MASTER_KEY="${MASTER_KEY}"
 BROWSER_WEB_URL="http://localhost:__PORT_BROWSER__"
@@ -18,3 +18,5 @@ BROWSER_WEB_URL="http://localhost:__PORT_BROWSER__"
 # OLLAMA_BASE_URL=
 # INFERENCE_TEXT_MODEL=
 # INFERENCE_IMAGE_MODEL=
+
+DB_WAL_MODE=true
