--- a/conf/.env
+++ b/conf/.env
@@ -5,7 +5,7 @@ PORT=__PORT_WEB__
 
 NODE_ENV=production
 SERVER_VERSION=__RELEASE__
-NEXTAUTH_SECRET="__SECRET__"
+NEXTAUTH_SECRET=__SECRET__
 NEXTAUTH_URL="http://127.0.0.1:__PORT_WEB__"
 DATA_DIR=__INSTALL_DIR__/db
 ASSETS_DIR=__DATA_DIR__/assets
