--- a/conf/karakeep-workers.service
+++ b/conf/karakeep-workers.service
@@ -10,7 +10,7 @@ Restart=always
 EnvironmentFile=__INSTALL_DIR__/.env
 Environment="PATH=__PATH_WITH_NODEJS__"
 WorkingDirectory=__INSTALL_DIR__/apps/workers
-ExecStart=__NODEJS_DIR__/node dist/index.mjs
+ExecStart=__NODEJS_DIR__/node prod/dist/index.mjs
 StandardOutput=append:/var/log/__APP__/karakeep-workers.log
 StandardError=append:/var/log/__APP__/karakeep-workers.log
 TimeoutStopSec=5
