--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -14,3 +14,9 @@ location __PATH__/ {
   proxy_set_header   Upgrade $http_upgrade;
   proxy_set_header   Connection $connection_upgrade;
 }
+
+location /_next/static/ {
+    alias __INSTALL_DIR__/apps/web/.next/static/;
+    access_log off;
+    add_header Cache-Control "public, max-age=31536000, immutable";
+}
