--- a/conf/.env
+++ b/conf/.env
@@ -20,3 +20,10 @@ BROWSER_WEB_URL="http://localhost:__PORT_BROWSER__"
 # INFERENCE_IMAGE_MODEL=
 
 DB_WAL_MODE=true
+
+SMTP_HOST=__DOMAIN__
+SMTP_PORT=587
+SMTP_SECURE=true
+SMTP_USER=__APP__
+SMTP_PASSWORD=__MAIL_PWD__
+SMTP_FROM=__APP__@__DOMAIN__
