--- a/conf/.env
+++ b/conf/.env
@@ -6,7 +6,7 @@ PORT=__PORT_WEB__
 NODE_ENV=production
 SERVER_VERSION=__RELEASE__
 NEXTAUTH_SECRET=__SECRET__
-NEXTAUTH_URL="http://127.0.0.1:__PORT_WEB__"
+NEXTAUTH_URL=https://__DOMAIN__
 DATA_DIR=__INSTALL_DIR__/db
 ASSETS_DIR=__DATA_DIR__/assets
 #MEILI_ADDR="http://127.0.0.1:7700"
