--- a/config_panel.toml
+++ b/config_panel.toml
@@ -104,15 +104,15 @@ name.fr = "Configuration de Karakeep"
         ask.en = "MeiliSearch URL"
         ask.fr = "URL MeiliSearch"
         type = "url"
-        help.en = "Format: http://URL:PORT"
-        help.fr = "Format : http://URL:PORT"
-        default = ""
+        help.en = "MeiliSearch URL"
+        help.fr = "URL MeiliSearch"
+        default = "http://localhost:7700"
 
         [main.external_services.meili_master_key]
         ask.en = "MeiliSearch Master Key"
         ask.fr = "Clé maître MeiliSearch"
         type = "string"
-        default = ""
+        default = " "
 
         [main.external_services.openai_api_key]
         ask.en = "OpenAI API Key"
@@ -120,4 +120,4 @@ name.fr = "Configuration de Karakeep"
         type = "string"
         help.en = "Required if using OpenAI models for embeddings"
         help.fr = "Requis si vous utilisez les modèles OpenAI pour les embeddings"
-        default = ""
+        default = " "
